Fix bug on smaller phone

--- a/assets/css/style-new.css
+++ b/assets/css/style-new.css
@@ -1535,9 +1535,9 @@ footer {
     }
 
     .work-details {
-        display: grid;
-        grid-template-columns: auto auto;
-        grid-row-gap: 20px;
+      display: grid;
+      grid-template-columns: auto;
+      grid-row-gap: 20px;
     }
 
     .project-images {
@@ -1569,7 +1569,7 @@ footer {
     }
 
     .name-socials {
-        margin-bottom: 2rem;
+        margin-bottom: 0;
     }
 
     .about-me-wrapped {
@@ -1578,10 +1578,6 @@ footer {
 
     .about-me-wrapped h3 {
         margin-bottom: 2rem;
-    }
-
-    .name-socials {
-        margin: 0 0 2rem 0 !important;
     }
 
     .about-me-wrapped img {
